[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "aldheeb-pytools"
dynamic = ["version"]
description = "Python Tools library for some services"
requires-python = ">=3.12"
authors = [{ name = "Abdullah", email = "aldheeb01@gmail.com" }]
readme = "README.md"

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "typeguard", 
    "typing_extensions>=4.0; python_version < '3.13'",
]


[project.urls]
"Homepage" = "https://github.com/eeeob/aldheeb-pytools"

[project.optional-dependencies]
dev = [
    "hatch<=1.16.5",
    "twine<=6.2.0",
]

aiologic = ["aiologic>=0.16.0"]
mongo = ["pymongo>=4.16.0"]
country = ["pycountry>=26.2.16", "phonenumbers>=9.0.21"]
crypto = ["cryptography>=46.0.4"]
bs4 = ["beautifulsoup4>=4.14.3"]
imap = ["aioimaplib>=2.0.1"]
phone = ["phonenumbers>=9.0.21"]
tg = ["kurigram>=2.0.0"]

full = [
    "aldheeb-pytools[aiologic,mongo,country,crypto,bs4,imap,phone,tg]"
]

[tool.hatch.build.targets.sdist]
exclude = [
    ".github/",
]

[tool.hatch.version]
path = "pytools/__meta__.py"


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
ignore-vcs = true
packages = ["pytools"]